2010-11-28 # 0.8.2-dev

[NEW] Events are now defined in the "events" namespace of the "hooks" config.

[NEW] The "<flat_module_id>_WdHook" class is added to the autoload classes if the file "hooks.php"
is found in the root of a module directory.

[CHG] When defined as an array, the `scope` option is now cascading, a translation is searched in
the different scopes : array('users', 'delete', 'operation') can be used to search for a
translation in the 'users.delete.operation', 'delete.operaton' and 'operation' namespaces.

[CHG] Renamed the WdLocale class as WdI18n.




2010-11-08 # 0.8.0

[NEW] Hooks can now be used to add methods (and getters) to instances of the FObject class.

[NEW] The wd_array_insert() function can be used to insert values after or before a specified key.

[NEW] The ".json" or ".xml" extensions can be appened to RESTful operations URL for a response in
"application/json" or "application/xml" format.

[NEW] WdModule: The 'control_operation' callback now throws WdHTTPException exceptions when control
fail on CONTROL_AUTHENTICATION, CONTROL_PERMISSION, CONTROL_ENTRY and CONTROL_OWNERSHIP.

[NEW] Because isset() or get_object_vars() don't work with virtual properties, the `has_property`
of the FObject class can be used to know if an object has a property even if the property is NULL.

[NEW] The configuration system has been rewrote :

The configuration process is now handled through the WdConfig class instead of the WdCore class.

The 'autoconfig' feature is now deprecated. Classes can use the `__static_construct()` method to
read configuration on loading.

In order to be able to use the `__static_construct()` method, which is only called by the WdCore's
autoloader, the WdLocale, WdDebug and WdException classes are no longer loaded by the WdCore
include file, thus, they can only be available *after* the `__construct()` method returns.

[NEW] Module models can now use models from other modules, finally introducing a form of model